--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,12 +37,14 @@ body {
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
   line-height: 21px;
-  color: #000;
+  color: #000000;
 
   position: relative;
 }
 
 img {
+  max-width: 100%;
+  height: auto;
   object-fit: cover;
 }
 
@@ -70,7 +72,7 @@ img {
   align-items: center;
   padding: 0 70px 0;
 
-  background-color: #fff;
+  background-color: #ffffff;
 }
 
 .logo {
@@ -97,9 +99,11 @@ img {
 }
 
 .navigation-link {
+  display: inline-block;
+  max-width: 150px;
   font-size: 20px;
   line-height: 24px;
-  color: #000;
+  color: #000000;
   font-weight: 700;
   text-decoration: none;
   text-transform: capitalize;
@@ -135,6 +139,7 @@ img {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
+  row-gap: 10px;
 }
 
 .favourites {
@@ -152,11 +157,12 @@ img {
   top: 11px;
   font-size: 10px;
   line-height: 10px;
-  color: #fff;
+  color: #ffffff;
   width: 20px;
   height: 20px;
   background-color: #7db54f;
   border-radius: 50%;
+  overflow: hidden;
 }
 
 .favourites:hover {
@@ -193,15 +199,17 @@ img {
   line-height: 20px;
   text-align: center;
   text-transform: uppercase;
-  color: #fff;
+  color: #ffffff;
   text-decoration: none;
   cursor: pointer;
 
   border-radius: 4px;
   background-color: #756157;
+  overflow: hidden;
 }
 
 .page-header-button {
+  max-width: 160px;
   padding: 8px 34px;
 }
 
@@ -262,10 +270,11 @@ img {
 }
 
 .advantages-description {
-  margin: 0 0 90px;
+  margin: 0 auto 90px;
+  width: 660px;
   font-size: 22px;
   line-height: 26px;
-  color: #333;
+  color: #333333;
   text-align: center;
 }
 
@@ -283,6 +292,7 @@ img {
   justify-content: center;
   min-height: 385px;
   background-color: rgba(131, 179, 211, 0.12);
+  padding: 103px 85px;
 }
 
 /* ДЕЛАЕТ КАЖДЫЙ ТРЕТИЙ ЭЛЕМЕНТ БОЛЕЕ ТЕМНЫМ ЦВЕТОМ */
@@ -296,8 +306,12 @@ img {
 .advantages-item:first-child,
 .advantages-item:last-child {
   background-color: #82b3d3;
-  color: #fff;
+  color: #ffffff;
   flex-direction: column;
+}
+
+.advantages-item-wide {
+  padding: 0;
 }
 
 .advantages-list .advantages-item-wide {
@@ -315,38 +329,40 @@ img {
   align-items: center;
   flex-direction: column;
   width: 400px;
+  padding: 103px 85px;
 }
 
 .advantages-subtitle {
-  margin: 0 auto 60px;
+  margin: 0 auto 30px;
   width: 175px;
   font-size: 24px;
   line-height: 28px;
   text-transform: uppercase;
   text-align: center;
-  position: relative;
 }
 
-.advantages-subtitle::before {
+.advantages-item-wide:first-child .advantages-text::before,
+.advantages-item-wide:last-child .advantages-text::before {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.advantages-text {
+  position: relative;
+  padding-top: 30px;
+  width: 230px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.advantages-text::before {
   content: "";
   position: absolute;
   width: 60px;
   height: 2px;
   background-color: rgba(0, 0, 0, 0.3);
-  top: 86px;
+  top: -1px;
   left: 50%;
   transform: translateX(-50%);
-}
-
-.advantages-item-wide:first-child .advantages-subtitle::before,
-.advantages-item-wide:last-child .advantages-subtitle::before {
-  background-color: rgba(255, 255, 255, 0.3);
-}
-
-.advantages-text {
-  width: 230px;
-  margin: 0 auto;
-  text-align: center;
 }
 
 /* УСЛУГИ */
@@ -387,6 +403,7 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: 30px;
   align-items: center;
   width: 400px;
   min-height: 385px;
@@ -444,7 +461,8 @@ img {
 }
 
 .hotel-search-title {
-  margin: 0 0 20px;
+  width: 600px;
+  margin: 0 auto 20px;
   font-size: 30px;
   font-weight: 700;
   line-height: 36px;
@@ -463,6 +481,7 @@ img {
 
 .hotel-search-button {
   margin: 0 auto;
+  max-width: 400px;
   padding: 8px 50px;
   font-size: 20px;
   line-height: 36px;
@@ -496,12 +515,13 @@ img {
 }
 
 .subscribe-title {
+  width: 500px;
   margin: 0 0 20px;
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
   text-align: center;
-  color: #fff;
+  color: #ffffff;
 }
 
 .subscribe-subtitle {
@@ -510,7 +530,7 @@ img {
   font-size: 22px;
   line-height: 26px;
   text-align: center;
-  color: #fff;
+  color: #ffffff;
 }
 
 .subscribe-form {
@@ -520,6 +540,7 @@ img {
 }
 
 .subscribe-button {
+  width: 232px;
   padding: 8px 50px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 20px;
@@ -573,7 +594,7 @@ img {
   background-color: #e6e6e6;
 }
 
-.subscribe-email:not(:placeholder-shown) {
+.subscribe-email:focus:not(:placeholder-shown) {
   outline: 2px solid #000;
   background-color: #f2f2f2;
 }
@@ -591,7 +612,7 @@ img {
   margin: 0 auto;
   padding: 46px 0 30px;
 
-  background-color: #fff;
+  background-color: #ffffff;
 }
 
 /* КОНТАКТЫ */
@@ -601,6 +622,7 @@ img {
   width: 1060px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   flex-wrap: wrap;
 }
 
@@ -641,6 +663,7 @@ img {
 }
 
 .contacts-phone {
+  max-width: 340px;
   font-size: 40px;
   line-height: 40px;
   color: #000;
@@ -699,7 +722,7 @@ img {
   background-image: url("../images/inner-header-picture.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  color: #fff;
+  color: #ffffff;
 }
 
 /* БЛОК С ЗАГОЛОВКОМ И ХЛЕБНЫМИ КРОШКАМИ */
@@ -721,7 +744,7 @@ img {
   padding: 0;
   list-style-type: none;
   display: flex;
-  position: relative;
+  flex-wrap: wrap;
 }
 
 .breadcrumbs-item {
@@ -844,9 +867,9 @@ img {
 
 .control-mark {
   display: inline-block;
-  width: 20px;
-  height: 20px;
-  background-color: #fff;
+  min-width: 20px;
+  min-height: 20px;
+  background-color: #ffffff;
   margin-right: 16px;
   position: relative;
   cursor: pointer;
@@ -881,7 +904,7 @@ img {
   background-color: #3f5e72;
   position: absolute;
   border-radius: 50%;
-  border: 5px solid #fff;
+  border: 5px solid #ffffff;
   display: none;
 }
 
@@ -921,7 +944,7 @@ img {
   outline: 3px solid #83b3d3;
 }
 
-.range-input-wrapper .control-input:not(:placeholder-shown) {
+.range-input-wrapper .control-input:focus:not(:placeholder-shown) {
   outline: 2px solid #000;
   background-color: #f2f2f2;
 }
@@ -932,12 +955,15 @@ img {
 }
 
 .control-input-text {
+  width: 20px;
+  height: 24px;
   color: #000;
   line-height: 24px;
   opacity: 0.3;
   position: absolute;
   top: 12px;
   right: 20px;
+  overflow: hidden;
 }
 
 .range-input-wrapper {
@@ -980,14 +1006,14 @@ img {
 .range-bar {
   width: 226px;
   height: 4px;
-  background-color: #fff;
+  background-color: #ffffff;
   position: relative;
 }
 
 .range-toggle {
   width: 20px;
   height: 20px;
-  background-color: #fff;
+  background-color: #ffffff;
   border: none;
   border-radius: 5px;
   position: absolute;
@@ -1031,6 +1057,7 @@ img {
   font-family: "PT Sans", "Arial", sans-serif;
   padding: 8px 50px;
   border: none;
+  max-width: 191px;
 }
 
 .filter-button {
@@ -1052,7 +1079,7 @@ img {
 }
 
 .filter-button:disabled {
-  color: #fff;
+  color: #ffffff;
   background-color: #e5e5e5;
   cursor: initial;
 }
@@ -1082,7 +1109,7 @@ img {
 
 .hotels-catalog {
   margin: 0 auto;
-  padding: 53px 0 60px;
+  padding: 50px 0 60px;
   width: 1060px;
 }
 
@@ -1104,7 +1131,7 @@ img {
 
 .select-control {
   margin: 0 70px 0 0;
-  padding: 10px 20px;
+  padding: 12px 18px;
   width: 292px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
@@ -1115,7 +1142,7 @@ img {
   appearance: none;
   background-image: url("../images/svg-icons/select-arrow.svg");
   background-repeat: no-repeat;
-  background-position: 259px 16px;
+  background-position: 258px 18px;
   cursor: pointer;
 }
 
@@ -1206,6 +1233,7 @@ img {
   padding: 20px;
   display: flex;
   flex-direction: column;
+  gap: 16px;
   justify-content: space-between;
   min-height: 438px;
   border: 1px solid #e6e6e6;
@@ -1235,7 +1263,9 @@ img {
 .hotel-item-wrapper {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   flex-wrap: wrap;
+  row-gap: 16px;
 }
 
 .hotel-type,
@@ -1246,6 +1276,7 @@ img {
 .star {
   margin: 0;
   width: 140px;
+  height: 17px;
   background-repeat: repeat-x;
   background-position: left center;
 }
@@ -1354,20 +1385,23 @@ img {
 
 .pagination-link {
   min-width: 60px;
+  max-width: 100px;
   padding: 0 10px;
-  height: 60px;
+  min-height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
 
   text-transform: uppercase;
+  text-align: center;
   font-size: 20px;
   font-weight: 700;
   line-height: 36px;
   background-color: #82b3d3;
-  color: #fff;
+  color: #ffffff;
   text-decoration: none;
   border-radius: 4px;
+  overflow: hidden;
 }
 
 .pagination-link:hover {
@@ -1406,7 +1440,7 @@ img {
 }
 
 .pagination-link-show-all {
-  background-color: #fff;
+  background-color: #ffffff;
   color: #000;
   font-size: 22px;
   line-height: 26px;
@@ -1414,24 +1448,24 @@ img {
 }
 
 .pagination-link-show-all:hover {
-  background-color: #fff;
+  background-color: #ffffff;
 }
 
 .pagination-link-show-all:focus-visible {
   outline: none;
-  background-color: #fff;
+  background-color: #ffffff;
 }
 
 .pagination-link-show-all:active {
   color: #000;
-  background-color: #fff;
+  background-color: #ffffff;
 }
 
 /* БЛОК С ПОДПИСКОЙ */
 
 .subscribe-inner {
   background-image: none;
-  background-color: #fff;
+  background-color: #ffffff;
 }
 
 .subscribe-inner .subscribe-title,
@@ -1459,7 +1493,7 @@ img {
 .modal-wrapper {
   padding: 64px 70px;
   width: 717px;
-  background-color: #fff;
+  background-color: #ffffff;
   border-radius: 30px;
   box-shadow: 0px 25px 50px 0px rgba(0, 0, 0, 0.15);
   position: fixed;
@@ -1546,7 +1580,7 @@ img {
 
 .modal-form-input {
   position: relative;
-  padding: 12px 20px;
+  padding: 12px 50px 12px 20px;
   width: 440px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
@@ -1575,7 +1609,7 @@ img {
   background-color: #e6e6e6;
 }
 
-.modal-form-input:not(:placeholder-shown) {
+.modal-form-input:focus:not(:placeholder-shown) {
   outline: 2px solid #000;
   background-color: #f2f2f2;
 }
@@ -1599,7 +1633,7 @@ img {
 
 .clients-number .modal-form-input {
   width: 110px;
-  padding: 12px 0;
+  padding: 12px 35px;
   text-align: center;
 }
 
@@ -1702,7 +1736,7 @@ img {
   padding: 20px 18px 23px 22px;
   box-shadow: 0px 15px 30px 0px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
-  color: #fff;
+  color: #ffffff;
   font-size: 16px;
   line-height: 20px;
   font-weight: normal;
@@ -1732,7 +1766,7 @@ img {
   background-color: #83b3d3;
   border-radius: 10px;
   border: none;
-  color: #fff;
+  color: #ffffff;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 20px;
   font-weight: 700;
@@ -1755,7 +1789,7 @@ img {
 }
 
 .modal-form-button:disabled {
-  color: #fff;
+  color: #ffffff;
   background-color: #e5e5e5;
   cursor: initial;
 }
